# HpT-N3LO

./: :w  README.md  dSigmadpt.cpp  dSigmadptN.cpp  dSigmadptX.cpp  main.cpp  meson.build
.github/workflows/: clang-format.yml
include/: AnomalousDim.h  CombinedRes.h  ComplexDefs.h  HarmonicSum.h  HighEnergyExp.h  IntMellin.h  Integration.h  MellinFunc.h  SmallptExp.h  ThresExp.h  ThresXspace.h  meson.build
notebooks/: HE_FO_xspace_comparison.nb  HE_approx.nb
runcards/: Mellin-HpT-as-N.yaml  Mellin-HpT-as-pt.yaml  Mellin-HpT-nlo.yaml
src/: AnomalousDim.cpp  CombinedRes.cpp  ComplexDefs.cpp  HarmonicSum.cpp  HighEnergyExp.cpp  IntMellin.cpp  Integration.cpp  MellinFunc.cpp  SmallptExp.cpp  ThresExp.cpp  ThresXspace.cpp  meson.build
